// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaskCard — snapshots > matches snapshot: critical in_progress task with all badges 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="true" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Urgent Fix</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-priority-critical">!!</v-chip>
        <!--v-if-->
        <!--v-if-->
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-effort-l">L</v-chip>
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <div data-v-8da3d041="" class="card-meta mt-3">
      <v-chip data-v-8da3d041="" size="x-small" variant="tonal" rounded="sm" style="color: rgb(0, 77, 64); background-color: rgb(128, 203, 196);">back-electron</v-chip><!-- Multi-agent avatars (≤3 + overflow badge) -->
      <!-- Fallback: single agent badge when no task_agents rows -->
      <agent-badge-stub data-v-8da3d041="" name="dev-back" active="false"></agent-badge-stub>
    </div><!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto card-footer-bordered">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#42</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: done task without agent or perimetre 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="false" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Completed Task</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <!--v-if-->
    <!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#99</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: minimal todo task 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="true" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Simple Task</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <!--v-if-->
        <!--v-if-->
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="default">—</v-chip>
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-effort-s">S</v-chip>
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <div data-v-8da3d041="" class="card-meta mt-3">
      <v-chip data-v-8da3d041="" size="x-small" variant="tonal" rounded="sm" style="color: rgb(0, 0, 0); background-color: rgb(255, 224, 130);">front-vuejs</v-chip><!-- Multi-agent avatars (≤3 + overflow badge) -->
      <!-- Fallback: single agent badge when no task_agents rows -->
      <agent-badge-stub data-v-8da3d041="" name="dev-front" active="false"></agent-badge-stub>
    </div><!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto card-footer-bordered">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#10</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;
